[package]
name = "redis-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
anyhow = "1"     # Standard for application error handling
thiserror = "1"  # Standard for library/module error definitions
tracing = "0.1"  # Best-in-class logging
tracing-subscriber = "0.3"
futures = "0.3"
lru = "0.12"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }