[package]
name = "redis-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
lru = "0.12"
tonic = "0.10"
prost = "0.12"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
tonic-build = "0.10"

[[bench]]
name = "benchmark"
harness = false